--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "yajra/laravel-datatables-oracle": "~6.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -40,6 +41,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [                         
+            "app/Helpers/fungsi.php"
         ]
     },
     "autoload-dev": {
